Prevent click drag selecting
This looks broken on a touch screen.

--- a/client/stylesheets/style.less
+++ b/client/stylesheets/style.less
@@ -15,6 +15,12 @@ body {
    * Dev background colors for reviewing media in graphic color context
    */
   /*background: darken(@torrey-pines-green-darker, 15%);*/
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 /**
